# cpp_design_patterns_RAII_Idiom

./: .gitignore  CMakeLists.txt
.github/workflows/: build.yml
tests/: tests.cpp
